tests/parser/command_form/invalid_04.m.out
In invalid_04.m, line 5
|     x = foo kitten; % command form only allowd as a statement
|             ^^^^^^ error: expected NEWLINE, found IDENTIFIER instead
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
