tests/parser/command_form/invalid_04.m
% (c) Copyright 2019 Florian Schanda

function invalid_04()
    kitten = 12;
    x = foo kitten; % command form only allowd as a statement
end
